--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./database.db:/app/database/database.db
+      - ./database.db:/app/database.db
