--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ yt-dlp==2022.03.08
 requests==2.27.1
 plumbum==1.7.2
 requests-oauthlib==1.3.1
+toml==0.10.2
+retry==0.9.2
 python-dotenv
 fastapi
 gunicorn
