--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-yt-dlp==2022.10.4
-requests==2.27.1
-plumbum==1.7.2
+yt-dlp==2023.2.17
+requests==2.28.2
+plumbum==1.8.1
 requests-oauthlib==1.3.1
 toml==0.10.2
-retry==0.9.2
+retry2==0.9.5
 python-dotenv
 fastapi
 gunicorn
