--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ fastapi = "^0.103.2"
 gunicorn = "^21.2.0"
 uvicorn = "^0.23.2"
 jinja2 = "^3.1.2"
+pip = "^24.0"
 
 [build-system]
 requires = ["poetry-core"]
