🔧 Actualiza versiones de Alpine, Python, gcc y py3-pip; agrega volumen threads.conf en justfile; ajusta paquete en pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,7 @@ dev-dependencies = []
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = [
-    { include = "src" }
-]
+packages = ["pyblisher"]
 
 [tool.ruff]
 line-length = 120
