--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ license = { text = "MIT" }
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
+[tool.uv]
 managed = true
 dev-dependencies = []
 
